// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`oxfmtrc overrides > Prettier options override - only enabled for specific files 1`] = `
"--------------------
arguments: --check .
working directory: oxfmtrc_overrides/fixtures/prettier_overrides
exit code: 1
--- STDOUT ---------
Checking formatting...

indented.vue (<variable>ms)

Format issues found in above 1 files. Run without \`--check\` to fix.
Finished in <variable>ms on 5 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`oxfmtrc overrides > Tailwind CSS override - different options per file (cache test) 1`] = `
"--------------------
arguments: --check .
working directory: oxfmtrc_overrides/fixtures/tailwindcss_options
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 3 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`oxfmtrc overrides > basic file pattern override with excludeFiles 1`] = `
"--------------------
arguments: --check .
working directory: oxfmtrc_overrides/fixtures/basic
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 7 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`oxfmtrc overrides > editorconfig root section applies with oxfmtrc overrides 1`] = `
"--------------------
arguments: --check test.js
working directory: oxfmtrc_overrides/fixtures/editorconfig_root_only
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`oxfmtrc overrides > multiple overrides - later overrides take precedence 1`] = `
"--------------------
arguments: --check .
working directory: oxfmtrc_overrides/fixtures/multiple_overrides
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 5 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`oxfmtrc overrides > oxfmtrc overrides take precedence over editorconfig 1`] = `
"--------------------
arguments: --check .
working directory: oxfmtrc_overrides/fixtures/priority_over_editorconfig
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`oxfmtrc overrides > pattern with slash - matches only specified path 1`] = `
"--------------------
arguments: --check .
working directory: oxfmtrc_overrides/fixtures/path_with_slash
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 3 files using 1 threads.
--- STDERR ---------

--------------------"
`;
